<resources>
    <string name="app_name">Ohio Legal Services Assistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_ag_size">The assistance group size must be 1 or larger</string>
    <string name="rule_number">Rule Number:</string>
    <string name="FEDERAL_HOURLY_MINNIMUM_WAGE">7.25</string>

    <string name="action_settings">Settings</string>

    <!-- home layout !-->
    <string name="annual_income">Annual Income</string>
    <string name="date">Date Calculator</string>
    <string name="tv_number_of_days">How many days out?</string>
    <string name="tv_start_date">Starting date</string>

    <!-- about line -->
    <string name="about_text">This app was developed by Ohio State Legal Services Association with funding from the LSC TIG program. The purpose of the app is to provide useful information for legal services advocates, pro bono attorneys, and service providers for the poor in Ohio.\n\nFeedback is always welcome and encouraged. We would love to hear how you are using the app as well, any errors you find, things you would like to see added, and ways it can be improved. Email us at apps@oslsa.org.\n\nThe source code for this app is freely available on GitHub at www.github.com/oslsa.\n\nDISCLAIMER\n\nThis app is for informational purposes only and is not intended to provide legal advice. Use of this app does not create an attorney-client relationship between you, the user, and Ohio State Legal Services Association, Southeastern Ohio Legal Services, and any of its employees. You should neither take nor refrain from taking any legal action based upon the information in this app, but you should instead talk to a licensed attorney. Lastly, we have taken every effort to ensure the accuracy of the information in this app, but this app is offered as is, and there is no warranty that the information is accurate. Anyone relying on the information is responsible for ensuring the accuracy of it and its applicability to his or her particular situation.\n\nLICENSE\n\nOhio Legal Services Assistant\n\nCopyright (C) 2016  Ohio State Legal Services Association\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see www.gnu.org/licenses/.
</string>

    <string name="apr_warning">This APR calculator is only for calculating simple APRs where there are regular payments and the payments are made monthly. If the payment period is not monthly or if there is either a different first or last payment, this calculator will not work. While tests show it is fairly accurate, the results should only be used as an estimate and should be compared against a professional calculator before using the results in court.</string>

    <!-- buttons !-->
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>

    <!-- poverty level layout !-->
    <string name="tvAGSize">Assistance Group Size:</string>
    <string name="tvGrossEarnedIncome">Gross Earned Income:</string>
    <string name="year">Year:</string>

    <!-- calculator buttons layout !-->
    <string name="fpl">Federal Poverty Level</string>
    <string name="owf">OWF</string>
    <string name="food_stamps">Food Stamps</string>
    <string name="apr">APR</string>
    <string name="garnishment">Garnishability</string>

    <!-- Navigation Drawer strings !-->
    <string name="calculators">Calculators</string>
    <string name="forms">Forms</string>
    <string name="rules">Court Rules</string>
    <string name="resources">Local Resources</string>
    <string name="settings">Settings</string>
    <string name="about">About/Terms of Use</string>

    <!-- owf layout and java !-->
    <string name="tvDeemedIncome">Deemed/Allocable Income per Month:</string>
    <string name="tvUnearnedIncome">Unearned Income per Month:</string>
    <string name="tvDependentCare">Monthly dependent care costs:</string>

    <!-- food stamps layout and controller !-->
    <string name="household_information_heading">HOUSEHOLD INFORMATION</string>
    <string name="tvAGDisabled">Are there disabled members in AG?</string>
    <string name="results">RESULTS</string>
    <string name="tvAGSSI">Are all AG members SSI, DFA, or PRC recipients(categorical eligibility)? </string>
    <string name="income_information_heading">INCOME INFORMATION</string>
    <string name="tvEarnedIncome">Gross earned income of AG</string>
    <string name="earnedIncome">Earned income</string>
    <string name="headingMonthlyExpenses">MONTHLY EXPENSES</string>
    <string name="tvRent">Rent or mortgage</string>
    <string name="Rent">Rent/mortgage</string>
    <string name="tvPropertyTaxes">Property Taxes</string>
    <string name="tvPropertyInsurance">Property insurance</string>
    <string name="tvChildSupportNonAG">Child support for non-AG member</string>
    <string name="etChildSupport">Child support</string>
    <string name="tvMedicalExpenses">Medical expenses</string>
    <string name="headingUtilities">MONTHLY UTILITIES (check all that apply)</string>
    <string name="clHomeless">Client is homeless</string>
    <string name="heatingCooling">Heating and cooling costs</string>
    <string name="electricGasOil">Electric/gas/oil (non-heating)</string>
    <string name="waterSewer">Water or sewer</string>
    <string name="garbageTrash">Garbage or trash</string>
    <string name="phone">Telephone</string>
    <string name="tvAGaged">Are there any AG members over 60, blind, or disabled?</string>
    <string name="version">VERSION</string>

    <!-- garnishiment calculator -->
    <string name="income">Net Income</string>
    <string name="frequency">Frequency</string>

    <!-- forms -->
    <string name="exemption_list">Exemption List</string>
    <string name="medicaid_help_sheet">Medicaid Help Sheet</string>
    <string name="benefits_standards">Public Benefits Standards Help Sheet</string>
    <string name="add_forms">Edit/Add Forms</string>
    <string name="new_form">New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_user_forms">You have not added any forms at this time. To add new forms, press the "Add" button below.</string>
    <string name="form_name">Name of the form to display</string>
    <string name="name_hint">Form Name</string>
    <string name="pick_form">Pick Your Form</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_form">No Form Selected</string>
    <string name="search_instructions">This simple search is NOT case sensitive. Do not use special characters like " or *</string>

    <!-- arrays !-->
    <string-array name="frequency">
        <item>per hour</item>
        <item>per week</item>
        <item>every other week</item>
        <item>twice per month</item>
        <item>monthly</item>
        <item>annually</item>
    </string-array>

    <string-array name="categories">
        <item>All</item>
        <item>Courts</item>
        <item>Domestic Violence</item>
        <item>Law Enforcement</item>
        <item>Legal Clinics</item>
        <item>Other</item>
        <item>Social Service Agencies</item>
    </string-array>

    <string-array name="Rules">
        <item>Federal Rules of Evidence</item>
        <item>Federal Rules of Civil Procedure</item>
        <item>Ohio Rules of Appellate Procedure</item>
        <item>Ohio Rules of Civil Procedure</item>
        <item>Ohio Rules of Evidence</item>
        <item>Ohio Rules of Juvenile Procedure</item>
        <item>Ohio Rules of Professional Conduct</item>
    </string-array>

    <string-array name="rules_tags">
        <item>fed_evidence</item>
        <item>federal_civil_procedure</item>
        <item>ohio_appellate_rules</item>
        <item>ohio_rules_cp</item>
        <item>ohio_rules_evidence</item>
        <item>ohio_juvenile</item>
        <item>ohio_prof_resp</item>
    </string-array>

    <string-array name="owf_versions">
        <item>Current (1/1/18)</item>
        <item>7/1/17 to 7/1/18</item>
        <item>1/1/17 to 7/1/17</item>
        <item>7/1/16 to 1/1/17</item>
        <item>1/1/16 to 7/1/16</item>
        <item>1/1/15 to 1/1/16</item>
        <item>7/1/14 to 1/1/15</item>
    </string-array>

    <string-array name="resource_categories">
        <item>All Categories</item>
        <item>Courts</item>
        <item>Domestic Violence</item>
        <item>Law Enforcement</item>
        <item>Legal Clinics</item>
        <item>Other</item>
        <item>Social Service Agencies</item>
    </string-array>

    <string-array name="hotdoc_names">
        <item>Create Living Will/Health Care POA</item>
        <item>Create Statutory Form Power of Attorney</item>
    </string-array>

    <string-array name="hotdoc_urls">
        <item>https://lawhelpinteractive.org/Interview/InterviewHome?templateId=5718</item>
        <item>https://lawhelpinteractive.org/Interview/InterviewHome?templateId=5720</item>
    </string-array>

</resources>
