<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_calculators" android:icon="@drawable/ic_calculator"
            android:title="@string/calculators" />
        <item android:id="@+id/nav_rules" android:icon="@drawable/ic_rules"
            android:title="@string/rules" />
        <item android:id="@+id/nav_resources" android:icon="@drawable/ic_resources"
            android:title="@string/resources" />
        <item android:id="@+id/nav_forms" android:icon="@drawable/ic_forms"
            android:title="@string/forms" />
        <item android:id="@+id/pika_mobile" android:icon="@android:drawable/ic_dialog_map"
            android:title="Pika Mobile" />
    </group>

    <item android:title="Misc.">
        <menu>
            <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_help"
                android:title="@string/about" />
        </menu>
    </item>

</menu>