<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1" >

        <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">

            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="4dp"
                style="@style/cards">

                <TextView android:text="@string/version"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/version_spinner"
                    android:padding="10dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="4dp"
                style="@style/cards">

            <TextView android:text="@string/household_information_heading"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/tvAGSize"
                        style="@style/seventy"
                        android:layout_margin="4dp"/>
                    <EditText
                        android:id="@+id/etAGSize"
                        android:inputType="number"
                        android:layout_margin="4dp"
                        style="@style/thirty"/>

                </LinearLayout>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvAGaged"
                        android:id="@+id/agAgedSwitch" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvAGSSI"
                        android:id="@+id/agSSISwitch" />

            </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="4dp"
                style="@style/cards">
            <TextView
                android:text="@string/income_information_heading"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView
                        style="@style/seventy"
                        android:text="@string/tvEarnedIncome"/>
                    <EditText
                        android:id="@+id/etEarnedIncome"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/seventy"
                        android:text="@string/tvUnearnedIncome"/>
                    <EditText
                        android:id="@+id/etUnearnedIncome"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

            </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="4dp"
                style="@style/cards">
            <TextView
                android:text="@string/headingMonthlyExpenses"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/tvRent"
                        style="@style/seventy"
                        android:text="@string/tvRent"/>
                    <EditText android:id="@+id/etRent"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/tvPropertyTaxes"
                        style="@style/seventy"
                        android:text="@string/tvPropertyTaxes"/>

                    <EditText android:id="@+id/etPropertyTaxes"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/tvPropertyInsurance"
                        style="@style/seventy"
                        android:text="@string/tvPropertyInsurance"/>
                    <EditText android:id="@+id/etPropertyInsurance"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/tvDependentCare"
                        style="@style/seventy"
                        android:text="@string/tvDependentCare"/>
                    <EditText android:id="@+id/etDependentCare"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/tvChildSupportNonAG"
                        style="@style/seventy"
                        android:text="@string/tvChildSupportNonAG"/>
                    <EditText android:id="@+id/etChildSupport"
                        style="@style/thirty"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:id="@+id/tvMedicalExpenses"
                        style="@style/seventy"
                        android:visible="false"
                        android:text="@string/tvMedicalExpenses"/>
                    <EditText android:id="@+id/etMedicalExpenses"
                        style="@style/thirty"
                        android:visible="false"
                        android:inputType="numberDecimal"/>
                </LinearLayout>
            </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardCornerRadius="4dp"
                style="@style/cards">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/headingUtilities"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <CheckBox
                        android:id="@+id/clientHomeless"
                        android:text="@string/clHomeless"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                    <CheckBox
                        android:id="@+id/heatingCooling"
                        android:text="@string/heatingCooling"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                    <CheckBox
                        android:id="@+id/electricGasOil"
                        android:text="@string/electricGasOil"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                    <CheckBox
                        android:id="@+id/waterSewer"
                        android:text="@string/waterSewer"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                    <CheckBox
                        android:id="@+id/garbageTrash"
                        android:text="@string/garbageTrash"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                    <CheckBox
                        android:id="@+id/phone"
                        android:text="@string/phone"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/clear_calculate_layout"/>

</LinearLayout>