<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/add"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/new_form"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_form"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/edit"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/delete_form"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/delete"
            android:layout_margin="8dp"/>

    </LinearLayout>

</LinearLayout>