<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        style="@style/cards"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fpl"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/annual_income"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/annual_income"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:hint="@string/tvAGSize"
                android:id="@+id/ag_size"
                android:inputType="number"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:text="@string/calculate"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/calculateFPL"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/cards"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rules"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rules_spinner" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/view_rules"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>