<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        style="@style/cards"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:text="@string/year" />

                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:id="@+id/version_spinner" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:text="@string/tvAGSize" />

                <EditText
                    android:id="@+id/etAGSize"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:text="@string/tvGrossEarnedIncome" />

                <EditText
                    android:id="@+id/etGrossEarnedIncome"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:inputType="numberDecimal"
                    android:focusable="true" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <include layout="@layout/clear_calculate_layout"/>

</RelativeLayout>
